--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>User Settings</h2>
-  <form #form="ngForm">
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
     <div class="form-group">
       <label for="name" placeholder="Name">Name</label>
       <input
@@ -8,7 +8,17 @@
         name="name"
         class="form-control"
         [(ngModel)]="userSettings.name"
+        required
+        #nameField="ngModel"
+        [class.field-error]="form.submitted && nameField.invalid"
+        (blur)="onBlur(nameField)"
       />
+      <div
+        [hidden]="!form.submitted || nameField.valid"
+        class="alert alert-danger"
+      >
+        Enter a name
+      </div>
     </div>
 
     <div class="form-check form-group">
@@ -90,5 +100,3 @@
     <button class="btn btn-primary">Send</button>
   </form>
 </div>
-
-{{ userSettings | json }}
