--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -80,9 +80,9 @@
         name="subscriptionType"
         [(ngModel)]="userSettings.subscriptionType"
       >
-        <option>Monthly</option>
-        <option>Annual</option>
-        <option>Lifetime</option>
+        <option *ngFor="let type of subscriptionTypes | async">
+          {{ type }}
+        </option>
       </select>
     </div>
 
@@ -95,6 +95,10 @@
         rows="3"
         [(ngModel)]="userSettings.notes"
       ></textarea>
+    </div>
+
+    <div [hidden]="!postError" class="alert alert-danger">
+      {{ postErrorMessage }}
     </div>
 
     <button class="btn btn-primary">Send</button>
